updated class names

--- a/2-col.html
+++ b/2-col.html
@@ -15,10 +15,9 @@
 	<![endif]-->
 </head>
 
-<body id="csr-page">
-
+<body>
 	<header id="main">
-		<div class="site-width-container">			
+		<div class="corset">			
 
 			<h1 id="site-logo" class="hide-text"><a href="/">Green Mountain Coffee Roasters, Inc.</a></h1>
 			<img id="site-logo-inc" src="images/global/header/gmcrInc.gif" width="287" height="17" alt="GmcrInc" />
@@ -42,11 +41,11 @@
 					<li class="press-room"><a href="/index.html">Press Room</a></li>
 					<li class="investor-relations"><a href="http://investor.gmcr.com">Investor Relations</a></li>
 				</ul>
-			</nav> <!--end navigation-->  
-		</div> <!-- end site-width-container -->
+			</nav> <!--end nav-->  
+		</div> <!-- end corset -->
 	</header> <!-- end header#main -->
 
-	<div id="main-content" class="site-width-container two-column clearfix">
+	<div id="main-content" class="corset two-column clearfix">
 		<div id='customer-care-number' class="serif">
 			Customer Care: 800-545-2326
 		</div>
@@ -112,7 +111,7 @@
 
 	</div> <!-- end main-content two-column -->
 
-	<footer id="main" class="site-width-container">
+	<footer id="main" class="corset">
 		<section id="footer-customer-service" class="clearfix">
 			<article>
 				<h6>For Business</h6>
