--- a/3-col.html
+++ b/3-col.html
@@ -15,10 +15,10 @@
 	<![endif]-->
 </head>
 
-<body id="csr-page">
+<body>
 
 	<header id="main">
-		<div class="site-width-container">			
+		<div class="corset">			
 			<h1 id="site-logo" class="hide-text"><a href="/">Green Mountain Coffee Roasters, Inc.</a></h1>
 			<img id="site-logo-inc" src="images/global/header/gmcrInc.gif" width="287" height="17" alt="GmcrInc" />
 
@@ -42,10 +42,10 @@
 					<li class="investor-relations"><a href="http://investor.gmcr.com">Investor Relations</a></li>
 				</ul>
 			</nav> <!--end navigation-->  
-		</div> <!-- end site-width-container -->
+		</div> <!-- end corset -->
 	</header> <!-- end header#main -->
 
-	<div id="main-content" class="site-width-container three-column clearfix">
+	<div id="main-content" class="corset three-column clearfix">
 		<div id='customer-care-number' class="serif">
 			Customer Care: 800-545-2326
 		</div>
@@ -75,9 +75,18 @@
 				<li>Nulla non leo in mauris eleifend auctor. Vivamus ac tristique lectus. </li>
 				<li>Sed pharetra purus accumsan ipsum blandit ut aliquam mauris hendrerit. </li>
 				<li>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</li>
+				<ul>
+					<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate, erat a vulputate viverra, quam tortor ultrices lorem, ac laoreet purus arcu vitae metus. </li>
+					<li>Sed pharetra purus accumsan ipsum blandit ut aliquam mauris hendrerit. </li>
+					<li>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</li>
+				</ul>
+				<li>Sed pharetra purus accumsan ipsum blandit ut aliquam mauris hendrerit. </li>
+				<li>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</li>
+
 			</ul>
 
 			<p>Compellingly simplify holistic data whereas intermandated scenarios. Continually facilitate low-risk high-yield methods of empowerment rather than interoperable processes.</p>
+
 			<h3>Bullet-less List</h3>
 			<ul class="bullet-less">
 				<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate, erat a vulputate viverra, quam tortor ultrices lorem, ac laoreet purus arcu vitae metus. </li>
@@ -89,29 +98,29 @@
 		</section> <!-- end csr-main -->
 
 		<aside>
-			<article class="section-icon partnering">
+			<h4 class="section-icon partnering">
 				Partnering
-			</article>
+			</h4>
 
-			<article class="section-icon building">
+			<h4 class="section-icon building">
 				Building
-			</article>
+			</h4>
 
-			<article class="section-icon creating">
+			<h4 class="section-icon creating">
 				Creating
-			</article>
+			</h4>
 
-			<article class="section-icon protecting">
+			<h4 class="section-icon protecting">
 				Protecting
-			</article>
+			</h4>
 
-			<article class="section-icon supporting">
+			<h4 class="section-icon supporting">
 				Supporting
-			</article>
+			</h4>
 
-			<article class="section-icon working">
+			<h4 class="section-icon working">
 				Working
-			</article>
+			</h4>
 
 			<article class="white">
 				<a href="#">Download the Complete 2010 CSR Report (3 MB)</a>
@@ -143,7 +152,7 @@
 		</aside> <!-- end secondary aside -->
 	</div> <!-- end main-content -->
 
-	<footer id="main" class="site-width-container">
+	<footer id="main" class="corset">
 		<section id="footer-customer-service" class="clearfix">
 			<article>
 				<h6>For Business</h6>
