adding some fun

--- a/3-col.html
+++ b/3-col.html
@@ -99,7 +99,7 @@
 
 		<aside>
 			<h4 class="section-icon partnering">
-				Partnering
+				Partnering Fun!
 			</h4>
 
 			<h4 class="section-icon building">
