added relative paths

--- a/2-col.html
+++ b/2-col.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>2 Column: CSR</title>
-	<link rel="stylesheet" href="css/csr.css" type="text/css" />
+	<link rel="stylesheet" href="/css/csr.css" type="text/css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.7.2.min.js"><\/script>')</script>
 
@@ -20,7 +20,7 @@
 		<div class="corset">			
 
 			<h1 id="site-logo" class="hide-text"><a href="/">Green Mountain Coffee Roasters, Inc.</a></h1>
-			<img id="site-logo-inc" src="images/global/header/gmcrInc.gif" width="287" height="17" alt="GmcrInc" />
+			<img id="site-logo-inc" src="/images/global/header/gmcrInc.gif" width="287" height="17" alt="GmcrInc" />
 
 			<h2 class="hide-text">Our Brands</h2>
 			<ul id="retail-sites-list" class='serif'>
